--- a/css/train.css
+++ b/css/train.css
@@ -295,7 +295,7 @@ ul:after {
 }
 .mi_mid1 {
     position:absolute;
-    top: 240px;
+    top: 239px;
     left: 23px;
     width: 1106px;
     height: 1105px;
@@ -317,13 +317,13 @@ ul:after {
     height: 165px;
     position: absolute;
     top: 685px;
-    left: 145px;
+    left: 160px;
 }
 .video_list li{
     display: block;
     float: left;
     margin-right: 30px;
-    width: 193px;
+    width: 186px;
     height: 166px;
     border: 1px solid #d2f1a0;
     border-radius: 10px;
@@ -343,7 +343,7 @@ ul:after {
     margin-right: 0;
 }
 .video_list .list_title{
-    width: 192px;
+    width: 186px;
     display: block;
     text-align: center;
     color: #fff;
@@ -356,7 +356,7 @@ ul:after {
     transition-duration: 0.5s;
 }
 .video_list .zhezhao{
-    width: 193px;
+    width: 186px;
     height: 166px;
     position: absolute;
     z-index: 0;
@@ -380,12 +380,15 @@ ul:after {
     width: 942px;
     height: 940px;
 }
+
 .fc_head {
+    opacity: 0;
     position:relative;
     margin: 55px auto 50px 490px;
     width:200px;
     height:36px;
 }
+
 .fc_mid {
     position:relative;
     margin: 50px auto 0 166px;
@@ -459,11 +462,12 @@ ul:after {
     margin: 20px 10px 10px 10px;
     width: 264px;
     height: 226px;
-    border: 1px solid #222;
+    border: 1px solid #c0ea7a;
     border-radius: 15px;
     background: url('../imgs/fc_5.jpg') no-repeat;
     background-size: 100% 100%;
     cursor: pointer;
+    overflow: hidden;
 }
 .row_wrap {
     display: block;
@@ -477,15 +481,29 @@ ul:after {
 .semi-circle {
     position: absolute;
     left: 62px;
-    bottom: 0;
+    bottom: -35px;
     width: 130px;   
     height: 65px;
     border-radius: 100%;
     background: #f9fff1;
 }
+.semi-circle p {
+    display: block;
+    position: relative;
+    top: 6px;
+    color:#fe872f;
+    font-size: 16px;
+    text-align: center;
+}
 .fc_li ul li:hover .row_wrap {
     display: none;
 }
+.fc_li ul li:hover .semi-circle {
+    transition-property: all;
+    transition-duration: 0.5s;
+    bottom: -65px;
+}
+
 .fc_content .fc_li2 {
 }
 .clearfix:after {
@@ -505,22 +523,23 @@ ul:after {
     background: red;
 }
 #mask {
-    position: relative;
-    margin: -1472px auto 0 auto;
-    width: 1101px;
-    height: 1169px;
-    background: url('../imgs/fc_wrap.png') center center no-repeat;
-    opacity: 0.9;
-    filter: alpha(opacity = 90);
-    z-index: 10;
+    position:fixed;
+    top: 0;
+    left: 0;
+    height:100%;
+    width:100%;
+    background: #222;
+    opacity: 0.7;
+    filter: alpha(opacity = 70);
+    z-index: 100;
 }
 #fc_big {
     position: relative;
-    margin: -1000px auto 0 auto;
+    margin: -1200px auto 0 auto;
     height: 812px;
     width: 939px;
     background: url('../imgs/wrap_fff.png') center center no-repeat;
-    z-index: 11;
+    z-index: 110;
 }
 #fc_big .big_close {
     position: absolute;
@@ -779,6 +798,14 @@ ul:after {
     line-height: 40px;
     text-overflow: hidden;
 }
+.mi_mid4{
+    position:absolute;
+    top: 247px;
+    left: 0px;
+    width: 1106px;
+    height: 1105px;
+    background: url('../imgs/mi_mid4.png') center center no-repeat;
+}
 .mi_btn_box {
     position: absolute;
     margin-top: 49px;
@@ -807,6 +834,7 @@ ul:after {
     width: 213px;
     text-align: center;
     cursor: pointer;
+    color: #ffffff;
     background: url('../imgs/botton_hover.png') center center no-repeat;
 }
 .mi_btn2 {
@@ -816,6 +844,7 @@ ul:after {
     width: 213px;
     text-align: center;
     cursor: pointer;
+    color: #ff962a;
     background: url('../imgs/botton.png') center center no-repeat;
 }
 .mi_btn3 {
@@ -825,6 +854,7 @@ ul:after {
     width: 213px;
     text-align: center;
     cursor: pointer;
+    color: #ff962a;
     background: url('../imgs/botton.png') center center no-repeat;
 }
 .mi_btn4 {
@@ -834,6 +864,7 @@ ul:after {
     width: 213px;
     text-align: center;
     cursor: pointer;
+    color: #ff962a;
     background: url('../imgs/botton.png') center center no-repeat;
 }
 
